--- a/watermelon.ipynb
+++ b/watermelon.ipynb
@@ -6,55 +6,57 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-02-27T05:46:27.176371Z",
-     "start_time": "2025-02-27T05:46:23.214083Z"
+     "end_time": "2025-03-14T08:31:36.076241Z",
+     "start_time": "2025-03-14T08:31:36.073734Z"
     }
    },
    "source": [
-    "w=int(input())\n",
-    "if w%2==0:\n",
-    "    print(\"YES\")\n",
-    "else:\n",
-    "    print(\"NO\")"
+    "mul = .01\n",
+    "total = 1;"
    ],
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[1], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m w\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;43mint\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;28;43minput\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m w\u001B[38;5;241m%\u001B[39m\u001B[38;5;241m2\u001B[39m\u001B[38;5;241m==\u001B[39m\u001B[38;5;241m0\u001B[39m:\n\u001B[0;32m      3\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mYES\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
-      "\u001B[1;31mValueError\u001B[0m: invalid literal for int() with base 10: ''"
-     ]
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-27T09:08:35.727979Z",
-     "start_time": "2025-02-27T09:08:35.697954Z"
+     "end_time": "2025-03-14T08:31:36.234124Z",
+     "start_time": "2025-03-14T08:31:36.232109Z"
     }
    },
    "cell_type": "code",
-   "source": "len(\"Bhshusidnjshiusndjhwiuwjdkwhdajosa\")\n",
+   "source": [
+    "base = 1\n",
+    "for _ in range(365):\n",
+    "    total *= (mul + base)\n"
+   ],
    "id": "263601e7bf6a5f2",
+   "outputs": [],
+   "execution_count": 25
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-14T08:31:36.358955Z",
+     "start_time": "2025-03-14T08:31:36.355447Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "total",
+   "id": "db05ad6ad09789fd",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "34"
+       "37.783434332887275"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1
+   "execution_count": 26
   },
   {
    "metadata": {},
@@ -62,7 +64,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "db05ad6ad09789fd"
+   "id": "8428727d1df1ddd2"
   }
  ],
  "metadata": {
